Fix double blurring of blocked posts in blocked profiles

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -1697,6 +1697,9 @@ a[disabled]{
     filter: blur(5px);
 }
 
+.profile-page-blocked .post-blocked * {
+    filter: none !important; /* don't blur twice */
+}
 
 .post-muted .label-badge-list,
 .post-muted .post-author-image-link-container > .post-author-image-link,
